# pipebombclyde

./: .gitignore  Cargo.toml  README.md  config.toml  system.prompt
src/: channels.rs  main.rs  threads.rs
